Fixed annoying bug in Main_Website.html that caused the website to expience added overflow because of the translateX css property. Used a wrapper to stop over flow and that fixed the issue. Also added the Discord_Bot.html to the carousel and added a picture to go along with it. Changed the width of the paragraph to fit larger screen and smaller ones by changing units from em to vw. Added .hidden2-wrapper and a dont show animations is the user prefers no motion setting.

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -169,7 +169,7 @@ figcaption {
     /* creates margins to be centered*/
     margin-right: auto;
     /* spacing of the margins */
-    width: 50em;
+    width: 50vw;
 }
 
 .hidden {
@@ -188,8 +188,17 @@ figcaption {
     transition: all 1s 0.4s;
 }
 
+.hidden2-wrapper {
+
+    overflow: hidden;
+}
+
 @media(prefers-reduced-motion) {
     .hidden {
+        transition: none;
+    }
+
+    .hidden2 {
         transition: none;
     }
 }
@@ -198,7 +207,7 @@ figcaption {
 
     opacity: 1;
     filter: blur(0);
-    transform: translate(0);
+    transform: translate(0%);
 }
 
 .logos {
